fix h2 sizing, full suite items gap

--- a/scss/_elements.scss
+++ b/scss/_elements.scss
@@ -80,7 +80,7 @@ h2 {
   font-size: var(--font-size-800);
 
   @include media-queries.respond-desktop {
-    font-size: var(--font-size-1600);
+    font-size: var(--font-size-1100);
   }
 }
 
